[package]
name = "crt-sh"
version = "0.1.0"
edition = "2021"
authors = ["sintemal"]
license-file = "LICENSE"
description = "A simple rust wrapper around crt.sh"
repository = "https://github.com/sintemal/crt-sh.git"
readme = "README.md"
documentation = "https://docs.rs/crt-sh"
keywords = ["crt.sh", "crtsh", "certificate", "certificate transparency"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table-extract = {git = "https://github.com/sintemal/table-extract.git"}
chrono = "0.4.19"
reqwest = "0.11.9"
scraper = "0.11"
pem = "1.0.2"

[dev-dependencies]
tokio = {version = "1", features = ["rt-multi-thread"]}